<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/shahin_button_1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_1"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_4"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_7"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_7"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_0"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/button_0"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/button_bg"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/shahin_button_2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_2"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_5"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_8"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_8"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_plus"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_plus"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/shahin_button_3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_3"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_6"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_9"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_9"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_tavan"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_tavan"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/shahin_button_multiply"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_multiply"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_minus"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_minus"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_divide"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_divide"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/shahin_button_equals"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/button_equals"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:weightSum="4">
            <TextView
                android:id="@+id/shahin_text"
                android:layout_width="400dp"
                android:layout_height="105dp"
                android:background="@drawable/rounded_background"
                android:paddingStart="30dp"
                android:paddingTop="30dp"
                android:paddingEnd="10dp"
                android:text="@string/display_text"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:weightSum="4">

            <Button
                android:id="@+id/shahin_button_ac"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:text="@string/button_ac"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/shahin_button_factor"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:text="@string/button_factor"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/shahin_button_max"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:text="@string/button_max"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/shahin_button_reminder"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_bg"
                android:text="@string/button_reminder"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
